# MT5

./: .env.example  .env.template  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  AdaptiveEA.mq5  Dockerfile  LICENSE  MasterEA.mq5  README.md  RealtimeEA.mq5  __init__.py  auto_optimize.py  backtest.py  cli.py  config.yaml  config_models.py  config_schema.py  constraints-mt5linux.txt  constraints.txt  crypto_utils.py  data_versions.json  dataset.py  docker-compose.yml  eval_rl.py  evolve_indicators.py  evolve_symbols.py  generate_signals.py  grpc_api.py  install_programmatic_bridge.sh  log_utils.py  market_condition.py  meta_train_nn.py  metrics.py  mkdocs.yml  model_registry.py  monitor_drift.py  mt5linux-lock.txt  mypy.ini  (+45 more)
.dvc/: config
analysis/: active_learning.py  algorithm_rating.py  anomaly_detector.py  automl_scoreboard.py  backtest_invariants.md  broker_tca.py  causal_impact.py  change_point.py  concept_drift.py  cross_asset_confirm.py  cross_spectral.py  data_lineage.py  data_quality.py  decision_reviewer.py  diff_backtest.py  diffusion_scenarios.py  domain_adapter.py  dtw_features.py  energy_saver.py  ensemble_diversity.py  entry_value.py  evaluate.py  event_graph.py  evolved_indicators.yaml  evolved_symbols.yaml  exposure_matrix.py  extreme_value.py  factor_model.py  factor_updater.py  feature_evolver.py  feature_families.py  feature_gate.py  feature_importance_drift.py  feature_selector.py  fractal_features.py  frequency_features.py  garch_vol.py  gpu_features.py  grad_monitor.py  indicator_evolution.py  (+38 more)
analytics/: decision_logger.py  issue_client.py  metrics_aggregator.py  metrics_store.py  mlflow_client.py  regime_performance_store.py  trade_analyzer.py
backtesting/: monte_carlo.py  walk_forward.py
bot_apis/: __init__.py  feature_service.py  remote_api.py
brokers/: connection_manager.py  mt5_direct.py  mt5_issue_solver.py
certs/: ca.crt  plugin_pubkey.pem  server.crt  server.key
config/: account_config.yaml
core/: backup_manager.py  config_service.py  context_hub.py  distributed_scheduler.py  orchestrator.py  state_sync.py
data/: __init__.py  alt_data_loader.py  corporate_actions.py  delta_store.py  events.py  feature_scaler.py  feature_service.py  feature_store.py  features.py  fundamental_features.py  fundamental_loader.py  graph_builder.py  history.dvc  history.py  ingest.py  labels.py  live_recorder.py  macro_features.py  macro_sources.py  multitimeframe.py  onchain_features.py  options_features.py  options_vol.py  order_book.py  polars_utils.py  sanitize.py  streaming.py  tick_aggregator.py  trade_log.py  validators.py  versioning.py  vol_skew.py
dataset/: __init__.py
debian/: changelog  control  mt5bot.service  postinst  rules
deploy/: alert.rules.yml  bootstrap_influxdb.sh  cloud-init.yaml  mt5bot-update.service  mt5bot-update.timer  mt5bot.service  prestart.sh  prometheus.yml
deployment/: canary.py  influx_bootstrap.py  mlflow_credentials.py  prometheus_endpoints.py  prometheus_urls.py  runtime_secrets.py
docker/: Dockerfile  Dockerfile.cpu  Dockerfile.gpu  entrypoint.sh
docs/: ARCHITECTURE.md  EXTENDING.md  conf.py  config.html  config.md  index.rst  key_management.md  message_bus.md  monitoring.md  online_updates.md  strategy_approval.md  strategy_training.md
evaluation/: __init__.py  strategy_benchmark.py
event_store/: __init__.py  event_writer.py
execution/: __init__.py  algorithms.py  engine.py  execution_optimizer.py  fill_history.py  rl_executor.py  trading.py
feature_store/: __init__.py  evolved_indicators_v1.json
features/: __init__.py  adaptive_ma.py  auto_indicator.py  auto_indicators.py  baseline_signal.py  cointegration.py  cross_asset.py  divergence.py  evolved_indicators.py  evolved_symbols.py  kalman_ma.py  keltner_squeeze.py  liquidity_exhaustion.py  macd.py  microprice.py  multi_timeframe.py  news.py  oracle_intelligence.py  order_flow.py  orderbook.py  price.py  ram.py  regime.py  supertrend.py  validators.py  volume.py  vwap.py
federated/: __init__.py  client.py  coordinator.py  utils.py
grafana/: dashboard.json
indicators/: __init__.py  common.py
k8s/: deployment.yaml  pvc.yaml  service.yaml
mkdocs_docs/: index.md
models/: __init__.py  arima.py  bayesian_forecast.py  build_model.py  capital_allocator.py  conformal.py  contrastive_encoder.py  cross_asset_transformer.py  cross_modal_classifier.py  cross_modal_transformer.py  distillation.py  ensemble.py  exit_survival.py  export.py  feature_autoencoder.py  ftrl.py  gp_calibrator.py  graph_attention.py  graph_net.py  hier_forecast.py  hot_reload.py  indicator_hypernet.py  inference_client.py  meta_label.py  meta_learner.py  mixture_of_experts.py  model_store.py  multi_head.py  multi_task_heads.py  news_meta_label.py  orderbook_gnn.py  price_distribution.py  quantile_regression.py  quantize.py  remote_client.py  remote_server.py  residual_learner.py  residual_stacker.py  slimmable_network.py  strategy_controller.py  (+7 more)
monitor/: drift_handler.py
mt5/: __init__.py  __main__.py  ai_control.py  auto_optimize.py  backtest.py  cli.py  config_models.py  config_schema.py  controller_settings.py  eval_rl.py  feature_store_cli.py  focal_loss.py  generate_signals.py  grpc_api.py  log_utils.py  meta_train_nn.py  metrics.py  model_registry.py  monitor_drift.py  pipeline_runner.py  prediction_cache.py  pretrain_contrastive.py  ray_utils.py  realtime_train.py  remote_api.py  risk_manager.py  run_state.py  runtime_bootstrap.py  scheduler.py  state_manager.py  strategy_dsl.py  telemetry.py  train.py  train_autogluon.py  train_automl.py  train_baseline.py  train_cli.py  train_combined.py  train_ensemble.py  train_graphnet.py  (+10 more)
mt5_bridge_files/: mt5_rpyc_server.py
mt5_toolkit/: __init__.py  __main__.py
news/: __init__.py  aggregator.py  ai_enrichment.py  effect_length.py  impact_model.py  logic_sentiment.py  sentiment_fusion.py  sentiment_score.py  stock_headlines.py  vector_store.py
oracles/: __init__.py  (+1 more)
plugins/example_plugin/: pyproject.toml
plugins/example_plugin/example_plugin/: __init__.py  feature.py  indicator.py  strategy.py
(+782 files in other folders)
