[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mt5"
version = "0.1.0"
description = "Trading utilities and strategies for MetaTrader5 automation."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{ name = "MT5 Contributors" }]
dependencies = [
    "pandas",
    "pyarrow",
    "scikit-learn",
    "numpy",
    "pyyaml",
    "pydantic>=2,<3",
    "GitPython",
    "gdown",
    "filelock",
    "duckdb>=0.9.2",
    "dask[distributed]",
    "pandas_datareader",
    "lightgbm",
    "torch",
    "tqdm",
    "MetaTrader5",
    "scikit-optimize",
    "scipy",
    "river",
    "fastapi",
    "uvicorn",
    "mlflow",
    "shap",
    "statsmodels",
    "ydata-synthetic",
    "tsfresh",
    "exchange-calendars",
    "yfinance",
    "fredapi",
    "grpcio",
    "grpcio-tools",
    "backtrader",
    "freqtrade",
    "onnx",
    "onnxruntime",
    "skl2onnx",
    "onnxmltools",
    "gplearn",
]

[project.scripts]
mt5-train = "mt5.cli:train_entry"
mt5-train-nn = "mt5.cli:train_nn_entry"
mt5-train-rl = "mt5.cli:train_rl_entry"
mt5-train-strategy = "train_strategy:main"

[project.entry-points."mt5.features"]
core = "features:register_builtin_features"

[project.entry-points."mt5.strategies"]
baseline = "strategies:register_builtin_strategies"

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
gpu = ["tensorflow"]
heavy = [
    "autogluon==1.4.0",
    "ray==2.48.0",
    "torch-geometric==2.6.1",
]
rl = [
    "stable-baselines3==2.7.0",
    "sb3-contrib==2.7.0",
    "gym==0.26.2",
]
nlp = [
    "transformers==4.54.1",
    "FinGPT",
    "diffusers==0.34.0",
]
uvloop = ["uvloop==0.21.0"]

[tool.setuptools]
py-modules = [
    "auto_optimize",
    "backtest",
    "dataset",
    "eval_rl",
    "generate_signals",
    "grpc_api",
    "log_utils",
    "metrics",
    "meta_train_nn",
    "regime",
    "realtime_train",
    "remote_api",
    "signal_queue",
    "train", 
    "train_autogluon",
    "train_combined",
    "train_meta",
    "train_nn",
    "train_online",
    "train_strategy",
    "train_parallel",
    "train_rl",
    "cli",
    "walk_forward",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = ["E", "F"]
